test/tests/compiler/13_floating-point_numbers/invalid_types/extra_credit/bitwise_xor.plx
pub fn main(none) i32 {
    #  It's illegal to XOR doubles 
    return 1e10 ^ -1e10
}
